[gd_scene load_steps=10 format=2]

[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/spawn_platform.gd" type="Script" id=1]
[ext_resource path="res://plugins/basic_manufacturing/platform.obj" type="ArrayMesh" id=2]
[ext_resource path="res://addons/arrow.png" type="Texture" id=3]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/collision_flat_shape.tres" type="Shape" id=4]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/collision_slope_shape.tres" type="Shape" id=5]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/indicator_mesh.tres" type="QuadMesh" id=6]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/indicator_vehicle_material.tres" type="Material" id=7]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/indicator_matter_material.tres" type="Material" id=8]
[ext_resource path="res://plugins/basic_manufacturing/spawn_platform/drones_margin_shape.tres" type="Shape" id=9]

[node name="SpawnPlatform" type="StaticBody"]
script = ExtResource( 1 )
max_health = 2000
unit_name = "spawn_platform"

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1.91069e-15, 1, -4.37114e-08, 4.37114e-08, -4.37114e-08, -1, -1, 0, -4.37114e-08, 0, 1.01, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = ExtResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.928479, 0.371384, 0, -0.371384, 0.928479, 0, -1, -10.1 )
shape = ExtResource( 5 )

[node name="IndicatorMaterial" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.9, 1.01, 7.4 )

[node name="MeshInstance" type="MeshInstance" parent="IndicatorMaterial"]
transform = Transform( 1, 0, 0, 0, -5.55135e-07, 1, 0, -12.7, -4.37114e-08, 0, 0, 6.35 )
mesh = ExtResource( 6 )
material/0 = ExtResource( 8 )

[node name="IndicatorVehicle" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -6.4, 1.01, 7.4 )
material_override = ExtResource( 7 )
mesh = ExtResource( 6 )
material/0 = null

[node name="InteractionPort" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )

[node name="AntiDroneBox" type="StaticBody" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape" type="CollisionShape" parent="AntiDroneBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
shape = ExtResource( 9 )
